2015-12-24  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (acltotext32): Use tmp_pathbuf rather than stack buffer.
	(aclfromtext32): Ditto.

2015-12-24  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc: Cosmetic changes.

2015-12-18  Corinna Vinschen  <corinna@vinschen.de>

	* strfuncs.cc (sys_cp_wcstombs): Delete and move functionality into
	sys_wcstombs.
	* wchar.h (sys_cp_wcstombs): Drop declaration.
	* fhandler_console.cc (dev_console::con_to_str): Call sys_wcstombs.

2015-12-16  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (pwdgrp::parse_group): Only copy the SID if it's valid.
	* passwd.cc (pwdgrp::parse_passwd): Ditto.

2015-12-14  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* include/cygwin/signal.h (sigset_t): Move defintition to newlib.

2015-12-11  Ken Brown  <kbrown@cornell.edu>

	* fhandler_disk_file.cc (fhandler_base::fstat_helper): Align
	regparm attribute to declaration in fhandler.h.

2015-12-10  Corinna Vinschen  <corinna@vinschen.de>

	* path.h (class path_conv_handle): Use FILE_ALL_INFORMATION instead of
	FILE_NETWORK_OPEN_INFORMATION.  Use definitions from ntdll.h since it's
	included anyway.
	(path_conv_handle::fai): Change name from fnoi.
	(path_conv::fai): Ditto.
	(file_get_fai): Change name from file_get_fnoi.  Drop second parameter.
	* path.cc (file_get_fai): Ditto.  Fetch FileAllInformation rather than
	FileNetworkOpenInformation.  Convert STATUS_BUFFER_OVERFLOW to
	STATUS_SUCCESS.  Remove workaround to fetch FileBasicInformation and
	FileStandardInformation on filesystems with broken
	FileNetworkOpenInformation handling.
	(symlink_info::check): Accommodate above changes.  In case of using
	the NtQueryDirectoryFile fallback, fetch FileIdBothDirectoryInformation
	to get inode number as well.
	* fhandler_disk_file.cc (fhandler_base::fstat_by_handle): Drop outdated
	comment.  Accommodate change to using FileAllInformation.  Drop
	extra function calls to fetch NumberOfLinks and IndexNumber.  Set ino