@@ -1,5 +1,9 @@
 2015-12-24  Corinna Vinschen  <corinna@vinschen.de>
 
+	* sec_acl.cc (aclfromtext32): Return missing aclcnt parameter.
+
+2015-12-24  Corinna Vinschen  <corinna@vinschen.de>
+
 	* sec_acl.cc (acltotext32): Use tmp_pathbuf rather than stack buffer.
 	(aclfromtext32): Ditto.
 
